Correct base image.