@@ -1,9 +1,7 @@
-FROM java:8-jre-alpine
+FROM openjdk:8-jre-alpine3.8
 
 RUN apk --no-cache add openssl wget bash \
     && mkdir /data
-
-
 
 RUN cd / \
     && wget https://github.com/milaboratory/mixcr/releases/download/v3.0.2/mixcr-3.0.2.zip \
@@ -15,4 +13,4 @@ ENV PATH="/mixcr:${PATH}"
 
 WORKDIR /data
 
-ENTRYPOINT mixcr
+ENTRYPOINT ["mixcr", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap"]
